--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
 		</div>
 	</div>
 
-	<div class'row>
+	<!--<div class'row>
 
 		<div class = "col-lg-12 col-md-12 col-sm-12 col-xs-12">
 			
 			<div><p id="resultDivLoss"></p></div>
 			<div><p id="resultDivWin"></p></div>
 
-		</div>
+		</div>-->
 
 
 <!--row to diplay crystals-->
